Fix some linting issues